# docs/api.yaml
@@ -804,6 +804,26 @@ paths:
       tags:
       - Products
   /products/{id}:
+    get:
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      security:
+      - BearerAuth: []
+      - TenantHeader: []
+      summary: Busca produto por ID
+      tags:
+      - Products
     delete:
       parameters:
       - description: Product ID
@@ -1011,6 +1031,26 @@ paths:
       tags:
       - Services
   /services/{id}:
+    get:
+      parameters:
+      - description: Service ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      security:
+      - BearerAuth: []
+      - TenantHeader: []
+      summary: Busca serviço por ID
+      tags:
+      - Services
     delete:
       parameters:
       - description: Service ID
@@ -1113,6 +1153,26 @@ paths:
       tags:
       - Users
   /users/{id}:
+    get:
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.APIResponse'
+      security:
+      - BearerAuth: []
+      - TenantHeader: []
+      summary: Busca usuário por ID
+      tags:
+      - Users
     delete:
       parameters:
       - description: User ID
